--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mongoose": "^8.4.0",
     "next": "^14.2.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "daisyui": "^4.11.1",
